--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "mysql2": "^3.5.2",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
