--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Username: og3iu6taupnw09rn4os2
-# Password: pscale_pw_GyzJUqA7PEBwos3OlMNp1330DD5Ykv1DcK2vptQMrcZ
+# Username: pgyh9g2g6t4d3tx849ne
+# Password: pscale_pw_IA1ieA0gJO96DxWZTQ5qJU8ffAIYfMWt3YucI7rba0J   
 
-DATABASE_URL='mysql://og3iu6taupnw09rn4os2:pscale_pw_GyzJUqA7PEBwos3OlMNp1330DD5Ykv1DcK2vptQMrcZ@gcp.connect.psdb.cloud/blog-ai-app?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://pgyh9g2g6t4d3tx849ne:pscale_pw_IA1ieA0gJO96DxWZTQ5qJU8ffAIYfMWt3YucI7rba0J@gcp.connect.psdb.cloud/blog-ai-app?ssl={"rejectUnauthorized":true}&&sslaccept=strict'
