--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# Username: pgyh9g2g6t4d3tx849ne
-# Password: pscale_pw_IA1ieA0gJO96DxWZTQ5qJU8ffAIYfMWt3YucI7rba0J   
+# Username: 482op2f1fon68q8xw5kq
+# Password: pscale_pw_r4B9RZSBXeyEd3zSoX7uGshPkxh2zohkBz6tdLJvpr7   
+# &&sslaccept=strict window ssl
 
-DATABASE_URL='mysql://pgyh9g2g6t4d3tx849ne:pscale_pw_IA1ieA0gJO96DxWZTQ5qJU8ffAIYfMWt3YucI7rba0J@gcp.connect.psdb.cloud/blog-ai-app?ssl={"rejectUnauthorized":true}&&sslaccept=strict'
+DATABASE_URL='mysql://482op2f1fon68q8xw5kq:pscale_pw_r4B9RZSBXeyEd3zSoX7uGshPkxh2zohkBz6tdLJvpr7@gcp.connect.psdb.cloud/blog-ai-app?ssl={"rejectUnauthorized":true}&&sslaccept=strict'
+NEXT_PUBLIC_URL=http://localhost:3000
